chore: Fix settings main alignement

--- a/src/app/(proper_react)/(redesign)/(authenticated)/user/(dashboard)/settings/SettingsContent.module.scss
+++ b/src/app/(proper_react)/(redesign)/(authenticated)/user/(dashboard)/settings/SettingsContent.module.scss
@@ -1,7 +1,6 @@
 @use "../../../../../../tokens";
 
 .main {
-  align-items: center;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
